error_full.txt
    Checking zeroize v1.8.2
    Checking zerocopy v0.8.39
   Compiling stellar-strkey v0.0.9
   Compiling stellar-xdr v22.1.0
    Checking hex v0.4.3
    Checking anstyle-wincon v3.0.11
   Compiling soroban-env-common v22.1.3
    Checking anstyle-query v1.1.5
    Checking clap_lex v1.0.0
   Compiling rayon-core v1.13.0
    Checking getrandom v0.3.4
    Checking crossbeam-deque v0.8.6
    Checking anstream v0.6.21
    Checking serde_with v3.16.1
    Checking regex v1.12.3
   Compiling soroban-sdk-macros v22.0.10
   Compiling ethnum v1.5.2
    Checking clap_builder v4.5.60
   Compiling getrandom v0.4.1
    Checking foldhash v0.1.5
    Checking log v0.4.29
error[E0463]: can't find crate for `zeroize_derive`
   --> C:\Users\nwaug\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\zeroize-1.8.2\src\lib.rs:246:9
    |
246 | pub use zeroize_derive::{Zeroize, ZeroizeOnDrop};
    |         ^^^^^^^^^^^^^^ can't find crate

error[E0432]: unresolved import `crate::Zeroize`
 --> C:\Users\nwaug\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\zeroize-1.8.2\src\x86.rs:3:43
  |
3 | use crate::{atomic_fence, volatile_write, Zeroize};
  |                                           ^^^^^^^

Some errors have detailed explanations: E0432, E0463.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `zeroize` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
